links and icons
mkt page

--- a/2_market.html
+++ b/2_market.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/af750c1e8a.js" crossorigin="anonymous"></script>
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -44,7 +45,6 @@
     h3 {font-family: 'Montserrat', sans-serif; text-align: center;}
     h4 {font-family: 'Montserrat', sans-serif; font-weight: bold; text-align: center;}
     p {font-family: 'Lora', serif;}
-
 
     img {border: 1px solid #edeae6;}
 
@@ -212,7 +212,7 @@
         products available. Each day, they process milk into the finest cheeses in the nation, through a combination
         of time-honored tradition and the latest in dairy technology. Stickney Hill Dairy uses immense care and dedication to ensure a
         consistent, flavorful cheese with every batch.
-        <a href="https://stickneydairy.com/our-company/#sthash.x1ZQTa0v.dpuf"> See more here.</a></p>
+        <a href="https://stickneydairy.com/our-company/#sthash.x1ZQTa0v.dpuf">See more here.</a></p>
       </div>
 </div>
 
@@ -234,7 +234,11 @@
         to detail. We connect with our clients on a personal level, understand your vision, and then
         bring that vision to life in an amazing and memorable way. Our goal is to inspire and celebrate
         beauty and creativity in all people by creating wow-worthy florals, event designs, connections,
-        and community.</p></div>
+        and community.</p>
+        <p><a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href=""><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -244,7 +248,11 @@
     <h3>ALICE</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/alice.png"></div>
       <div class="rightcolumnvendor"><p>ALICE bags are created for you to channel your inner confidence and strength
-        while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</p></div>
+        while being beautiful. ALICE bags are designed to act as the finishing touch to any outfit.</p>
+        <p><a href="https://www.instagram.com/shopalicebags/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/Shopalicebags-981258342264499/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="https://shopalicebags.net"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -255,7 +263,11 @@
       <div class="leftcolumnvendor"><img src="photos_mktlogos/curiocities.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p>Our mission is to be the industry leader in socially-conscious,
         high-quality, handcrafted jewelry at an affordable price. Style should also have value. We believe
-        every woman should feel confident and empowered with our accessory collection at her fingertips.</p></div>
+        every woman should feel confident and empowered with our accessory collection at her fingertips.</p>
+        <p><a href="https://www.instagram.com/curiocitiesllc/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/CurioCitiesMN/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="http://www.curiocitiesmn.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -264,7 +276,10 @@
     <a name="es">
     <h3>Edina Spiritwear</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.png"></div>
-      <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p></div>
+      <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p>
+        <p><a href="https://www.instagram.com/dyp/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/dypcustom/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -277,7 +292,11 @@
       It's a rallying cry for anyone and everyone to express themselves by getting carried away in the kitchen.
       In collaboration with veteran local chef Mary Jane Miller, who has crafted these delightfully unique and
       full-flavored organic master sauces - the possibilities of what you can whip up are as easy as they are endless.
-      So, go on, and be yourself in the kitchen and in life. We can't wait to see what you cook up.</p></div>
+      So, go on, and be yourself in the kitchen and in life. We can't wait to see what you cook up.</p>
+      <p><a href="https://www.instagram.com/freakflagfoods/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+        <a href="https://www.facebook.com/freakflagfoods/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://freakflagorganics.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
   </div>
 
 <br>
@@ -290,7 +309,11 @@
         modern woman in mind. We think jewelry should be on trend, but never trendy, so we use organic
         materials and high quality, hypoallergenic 14K gold filled metal. We want you to wear these styles
         for years to come, and we encourage you to layer pieces, to mix and match and to create your own
-        favorite look, that evolves just as your personal style does.</p></div>
+        favorite look, that evolves just as your personal style does.</p>
+        <p><a href="https://www.instagram.com/jessicamrocks/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/jessicamrocks/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="https://www.jessicamrocks.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
   </div>
 
 <br>
@@ -302,7 +325,11 @@
       <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
         family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
         cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
-        Brand new waxed canvas and leather handbags are making their debut this fall.</p></div>
+        Brand new waxed canvas and leather handbags are making their debut this fall.</p>
+        <p><a href="https://www.instagram.com/shopktdesign/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/Shopktdesign/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a>
+          <a href=""></a></p>
+      </div>
   </div>
 
 <br>
@@ -313,16 +340,11 @@
       <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie love all things creative and GIRLY!
         Together, they've created fun, sassy, global treasures everyone will love! Their jewelry is created to help your
-        light shine bright.</p></div>
-  </div>
-
-<br>
-
-  <div class="row">
-    <a name="ns">
-    <h3>Nu Skin</h3>
-      <div class="leftcolumnvendor"></div>
-      <div class="rightcolumnvendor"><p class="left"></p></div>
+        light shine bright.</p>
+        <p><a href="https://www.instagram.com/madelinelynnebaubles/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/madelinelynnebaubles/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="https://www.madelinelynnebaubles.com"><i class="fas fa-external-link-alt" style="font-size:24px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -335,8 +357,22 @@
       there's no such thing as too cold. However, we're often faced with the choice of looking great and
       freezing, or staying warm in frumpy gear. Namakan bridges the gap between winter style and comfort,
       from the head down with our faux fur ruffs that attach to any hood or collar, beanies, earmuffs,
-      mittens and more.</p></div>
+      mittens and more.</p>
+      <p><a href="https://www.instagram.com/namakanfur/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+        <a href="https://www.facebook.com/namakanfur/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://namakangoods.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
   </div>
+
+<br>
+
+<div class="row">
+  <a name="ns">
+  <h3>Nu Skin</h3>
+    <div class="leftcolumnvendor"></div>
+    <div class="rightcolumnvendor"><p class="left"></p>
+    </div>
+</div>
 
 <br>
 
@@ -347,7 +383,11 @@
       <div class="rightcolumnvendor"><p class="left">Chika Griswold started Num Nuts in her Minnesota kitchen. Her passion for cooking
       and love of simple, healthy foods led her to try roasting her own nuts at home. Over time, she developed a unique
       recipe and roasting technique that delivered just the right amount of sweetness and saltiness and
-      allowed the delicious flavors of the nuts to shine through. Why the name "Num Nuts"? Because num, num, num, num, num!</p></div>
+      allowed the delicious flavors of the nuts to shine through. Why the name "Num Nuts"? Because num, num, num, num, num!</p>
+      <p><a href="https://www.instagram.com/num.nuts/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+        <a href="https://www.facebook.com/NumNutsLLC/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://www.numnuts.biz"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
   </div>
 
 <br>
@@ -359,7 +399,11 @@
       <div class="rightcolumnvendor"><p class="left">Mary Jane started her business with custom orders where she could work with clients
         to create unique and one-of-kind bags. Her passion for fabrics of all colors, textures, and patterns is her
         true inspiration. Mary Jane loves observing current fashion trends and working them into bags that people can
-        really use. All Studio Mary Jane bags are handmade and fully customizable!</p></div>
+        really use. All Studio Mary Jane bags are handmade and fully customizable!</p>
+        <p><a href="https://www.instagram.com/studiomaryjanebags/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/studiomaryjane/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="https://www.studiomaryjane.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      </div>
   </div>
 
 <br>
@@ -370,7 +414,11 @@
       <div class="leftcolumnvendor"><img src="photos_mktlogos/thumbs.png" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">Thumbs Cookies is a local cookie company that makes tiny delicious
         butter cookies. Not only are the delicious, but they are pretty cute too! We hope you enjoy the perfect bite
-        from Robyn and her Thumbs Team!</p></div>
+        from Robyn and her Thumbs Team!</p>
+        <p><a href="https://www.instagram.com/thumbscookies/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+          <a href="https://www.facebook.com/ThumbsCookies/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+          <a href="https://www.thumbscookies.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+      </div>
   </div>
 
 
