--- a/2_market.html
+++ b/2_market.html
@@ -429,6 +429,8 @@
 
   <footer>
     <h3>HAUTE HOUSE STUDIO</h3>
+    <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
+      <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
     <div class="row">
       <div class="column">
         <p><a href="mailto:hello@hautehousestudio.com" style="color:white;">hello@hautehousestudio.com</a>
