--- a/5_order.html
+++ b/5_order.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="https://kit.fontawesome.com/af750c1e8a.js" crossorigin="anonymous"></script>
 </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -123,6 +124,8 @@
   <footer>
     <h3>
   HAUTE HOUSE STUDIO</h3>
+  <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
+    <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
     <div class="row">
 
         <div class="column">
