--- a/2_market.html
+++ b/2_market.html
@@ -278,7 +278,8 @@
       <div class="leftcolumnvendor"><img src="photos_mktlogos/edina.png"></div>
       <div class="rightcolumnvendor"><p class="left">Support your favorite local team <em>and</em> be the best dressed!</p>
         <p><a href="https://www.instagram.com/dyp/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
-          <a href="https://www.facebook.com/dypcustom/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a></p>
+          <a href="https://www.facebook.com/dypcustom/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="http://www.Etsy.com/Shop/DypwickCustomApparel/"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
       </div>
   </div>
 
@@ -338,9 +339,9 @@
     <a name="mlb">
     <h3>Madeline Lynne Baubles</h3>
       <div class="leftcolumnvendor"><img src="photos_mktlogos/MLB.jpg" style="border: none;"></div>
-      <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie love all things creative and GIRLY!
-        Together, they've created fun, sassy, global treasures everyone will love! Their jewelry is created to help your
-        light shine bright.</p>
+      <div class="rightcolumnvendor"><p class="left">Mother-daughter duo Sarah and Maddie are inspired by all things creative and GIRLY!
+        Together, they've created fun, sassy, hand-beaded global treasures (aka baubles!) that will add a sophisticated "pop" to your life.
+        They hope that, when you wear these colorful accessories, your light will shine.</p>
         <p><a href="https://www.instagram.com/madelinelynnebaubles/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
           <a href="https://www.facebook.com/madelinelynnebaubles/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
           <a href="https://www.madelinelynnebaubles.com"><i class="fas fa-external-link-alt" style="font-size:24px;"></i></a></p>
