--- a/2_market.html
+++ b/2_market.html
@@ -123,6 +123,8 @@
         <br>
         <h3><a href="#tc">Thumbs Cookies</a></h3>
         <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
+        <h3><a href="#nd">Noonday Collection</a></h3>
+        <p>Jewelry and accessories handmade by artisans around the world.</p>
 
     </div>
 
@@ -364,6 +366,20 @@
         <a href="https://namakangoods.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
     </div>
   </div>
+
+<br>
+
+<div class="row">
+  <a name="noonday">
+  <h3>Noonday Collection</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/noonday.jpeg" style="border: none;"></div>
+    <div class="rightcolumnvendor"><p class="left">Socially conscious and amazingly gorgeous, Noonday Collection
+      sells jewelry and accessories handmade by artisans all over the globe.</p>
+    <p><a href="https://www.instagram.com/noondaycollection/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+      <a href="https://www.facebook.com/noondaycollection/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+      <a href="https://noondaycollection.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+  </div>
+</div>
 
 <br>
 
