added new vendors
MNBFG, who we are

--- a/2_market.html
+++ b/2_market.html
@@ -352,6 +352,26 @@
 
 <br>
 
+<div class="row">
+  <a name="mnbfg">
+  <h3>MN Brands for Good</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/MNBFG.png" style="border: none;"></div>
+    <div class="rightcolumnvendor"><p class="left">It started with us, two moms with 15 years of fundraising experience,
+      friendship and a love for all things local. We also shared the same discontent for the same ol’ fundraisers our
+      kids were bringing home. Guilt-ridden over asking friends and family to buy wrapping paper, unhealthy frozen
+      pizzas and processed cookie dough again and again, there had to be a better way. Our "ah-ha" moment came when
+      we found ourselves needing a fundraising solution and reaching for local Minnesota brands and their amazing
+      products - MN Brands For Good was founded. Our hope is that this new marketplace with purpose will bring
+      awareness to Minnesota brands while doing good within the Minnesota community. We sincerely hope you enjoy
+      shopping this collection of amazing products from MN Brands for Good!</p>
+    <p><a href="https://www.instagram.com/mnbrandsforgood/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+      <a href="https://www.facebook.com/mnbrandsforgood/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+      <a href="https://mnbrandsforgood.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+  </div>
+</div>
+
+<br>
+
   <div class="row">
     <a name="namakan">
     <h3>Namakan Fur</h3>
@@ -436,6 +456,23 @@
           <a href="https://www.facebook.com/ThumbsCookies/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
           <a href="https://www.thumbscookies.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
       </div>
+
+<br>
+
+<div class="row">
+  <a name="wwa">
+  <h3>Who We Are</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/whoweare.jpg"></div>
+    <div class="rightcolumnvendor"><p class="left">Who We Are kits make creating a family mission statement easy.
+      Our simple directions and values cards will help you and your family come up with a mission statement that
+      captures the spirit of your family. We’ll then create a custom sign for you to display in your home. Get
+      focused so you and your family can live the good life.</p>
+    <p><a href="https://www.instagram.com/whowearefamily/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+      <a href="https://www.facebook.com/whowearefamilymission/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+      <a href="https://www.whowearefamily.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+  </div>
+</div>
+
   </div>
 
 
