--- a/2_market.html
+++ b/2_market.html
@@ -123,6 +123,7 @@
         <br>
         <h3><a href="#tc">Thumbs Cookies</a></h3>
         <p>Tiny, melt-in-your mouth, delicious butter cookies made with high-quality ingredients.</p>
+        <br>
         <h3><a href="#nd">Noonday Collection</a></h3>
         <p>Jewelry and accessories handmade by artisans around the world.</p>
 
@@ -140,7 +141,10 @@
         <p>Tees, hats, sweatshirts and more to support your local team.</p>
         <br>
         <h3><a href="#ns">Nu Skin</a></h3>
-        <p> Lipglosses and toothpastes for the freshest mouth in town.</p>
+        <p>Lipglosses and toothpastes for the freshest mouth in town.</p>
+        <br>
+        <h3><a href="#wwa">Who We Are</a></h3>
+        <p>Family mission statements to clarify your values and signs custom-made to celebrate them.</p>
         <br>
         <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
         <p>Fun, sassy, global treasures.</p>
@@ -195,6 +199,9 @@
       <br>
       <h3><a href="#mlb">Madeline Lynne Baubles</a></h3>
       <p>Fun, sassy, global treasures.</p>
+      <br>
+      <h3><a href="#wwa">Who We Are</a></h3>
+      <p>Family mission statements to clarify your values and signs custom-made to celebrate them.</p>
   </div>
 
 </div>
@@ -356,7 +363,7 @@
   <a name="mnbfg">
   <h3>MN Brands for Good</h3>
     <div class="leftcolumnvendor"><img src="photos_mktlogos/MNBFG.png" style="border: none;"></div>
-    <div class="rightcolumnvendor"><p class="left">It started with us, two moms with 15 years of fundraising experience,
+    <div class="rightcolumnvendor"><p class="left">It started with two moms with 15 years of fundraising experience,
       friendship and a love for all things local. We also shared the same discontent for the same ol’ fundraisers our
       kids were bringing home. Guilt-ridden over asking friends and family to buy wrapping paper, unhealthy frozen
       pizzas and processed cookie dough again and again, there had to be a better way. Our "ah-ha" moment came when
