--- a/2_market.html
+++ b/2_market.html
@@ -183,7 +183,9 @@
       <br>
       <h3><a href="#jmj">Jessica Matrasko Jewelry</a></h3>
       <p>Delicate and beautiful jewelry designed in Hollywood and brought to MN.</p>
-
+      <br>
+      <h3><a href="#mnbfg">MN Brands for Good</a></h3>
+      <p>Best-selling locally made products at price points for everyone.</p>
 
   </div>
 
