--- a/3_events.html
+++ b/3_events.html
@@ -27,7 +27,7 @@
           <div class="topnav-right">
         <a href="https://kehanson14.github.io/Haute_Holidays/1-1_team.html" class="w3-bar-item w3-button w3-mobile">ABOUT</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/2_market.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY MARKET</a>
-        <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">PRIVATE EVENTS</a>
+        <a href="https://kehanson14.github.io/Haute_Holidays/3_events.html" class="w3-bar-item w3-button w3-mobile">EVENTS</a>
         <a href="https://kehanson14.github.io/Haute_Holidays/5_order.html" class="w3-bar-item w3-button w3-mobile">HOLIDAY DECOR</a>
         <a href="https://www.hautehousestudio.com/contact" class="w3-bar-item w3-button w3-mobile">CONTACT</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -76,6 +76,20 @@
       </div>
     </div>
   <br>
+
+  <div class="w3-container">
+    <h2>Haute Holiday Santa's Workshop</h2>
+    <h3>December 8, 2019 | 12PM-5PM</h3>
+    <div class="leftcolumn">
+        <p>Join us on December 8th from 12 to 5pm for our Haute Holiday Santa’s Workshop.
+          We will have crafts for the little ones and refreshments for all. Bring the whole
+          family and get a family portrait taken with a festive background. We are so excited
+          for the holidays and can’t wait to see you all there!</p>
+  </div>
+  <div class="rightcolumn">
+  <br><a href="https://www.eventbrite.com/o/haute-house-studio-18522634139" class="button">GET TICKETS!</a>
+  </div>
+  </div>
 
 <div class="w3-container">
   <h2>Floral & Event Decor</h2>
