--- a/5_order.html
+++ b/5_order.html
@@ -48,6 +48,9 @@
 
     img {border: 1px solid #edeae6;}
 
+    .resp-container {position: relative; overflow: hidden; padding-top: 56.25%;}
+    .resp-iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100; border: 0;}
+
     .hero-image {
       background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("photos_pages/freshdecor.png");
       height: 70%;
@@ -80,8 +83,8 @@
     <br>inspired and luxurious holiday design and decorating services.</h2>
 </div>
 <br>
-<div style="text-align:center;">
-    <iframe width="600" height="339" src="https://www.youtube.com/embed/kB1TnBfJomQ?controls=1" style="float:center">
+<div class="resp-container" style="text-align:center;">
+    <iframe class="resp-iframe" src="https://www.youtube.com/embed/kB1TnBfJomQ?controls=1" style="float:center">
   </iframe>
 </div>
 <div>
