--- a/2_market.html
+++ b/2_market.html
@@ -366,7 +366,7 @@
   <h3>MN Brands for Good</h3>
     <div class="leftcolumnvendor"><img src="photos_mktlogos/MNBFG.png" style="border: none;"></div>
     <div class="rightcolumnvendor"><p class="left">It started with two moms with 15 years of fundraising experience,
-      friendship and a love for all things local. We also shared the same discontent for the same ol’ fundraisers our
+      friendship and a love for all things local. We also shared the same discontent for the same ol' fundraisers our
       kids were bringing home. Guilt-ridden over asking friends and family to buy wrapping paper, unhealthy frozen
       pizzas and processed cookie dough again and again, there had to be a better way. Our "ah-ha" moment came when
       we found ourselves needing a fundraising solution and reaching for local Minnesota brands and their amazing
@@ -471,7 +471,7 @@
 <div class="row">
   <a name="wwa">
   <h3>Who We Are</h3>
-    <div class="leftcolumnvendor"><img src="photos_mktlogos/whoweare.jpg"></div>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/whoweare.jpg" style="border: none;"></div>
     <div class="rightcolumnvendor"><p class="left">Who We Are kits make creating a family mission statement easy.
       Our simple directions and values cards will help you and your family come up with a mission statement that
       captures the spirit of your family. We’ll then create a custom sign for you to display in your home. Get
