--- a/5_order.html
+++ b/5_order.html
@@ -80,7 +80,7 @@
     <br>inspired and luxurious holiday design and decorating services.</h2>
 </div>
 <br>
-<div style="text-align:center;">
+<div class="video" style="text-align:center;">
     <iframe width="600" height="339" src="https://www.youtube.com/embed/kB1TnBfJomQ?controls=1" style="float:center">
   </iframe>
 </div>
