--- a/3_events.html
+++ b/3_events.html
@@ -13,7 +13,7 @@
   <title>EVENTS - HAUTE HOLIDAY</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link href="https://fonts.googleapis.com/css?family=Lor|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora|Montserrat:400,700|Pinyon+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://kit.fontawesome.com/af750c1e8a.js" crossorigin="anonymous"></script>
 </head>
@@ -143,10 +143,10 @@
 </div>
 <br>
     <div class="row">
-      <div class="column">
+      <div class="halfcolumn">
         <img src="photos_index/events/longdrinks.jpg" alt="pink drinks" style="width:100%">
       </div>
-      <div class="column">
+      <div class="halfcolumn">
         <img src="photos_index/events/yay.jpg" alt="yay" style="width:100%">
       </div>
     </div>
@@ -154,25 +154,24 @@
 
 <br>
 
+
   <footer>
-    <h3>
-  HAUTE HOUSE STUDIO</h3>
-  <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
-    <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
+    <h3>HAUTE HOUSE STUDIO</h3>
+    <a href="https://www.instagram.com/hautehousestudio/"><i class="fab fa-instagram" style="font-size: 32px; color: white;"></i></a>
+      <a href="https://www.facebook.com/hautehousestudio/"><i class="fab fa-facebook-square" style="font-size: 32px; color: white;"></i></a>
     <div class="row">
       <div class="column">
-          <a href="mailto:hello@hautehousestudio.com" style="color:white;"> hello@hautehousestudio.com</a>
+        <p><a href="mailto:hello@hautehousestudio.com" style="color:white;">hello@hautehousestudio.com</a>
           <br>(612) 730-1143
-          <br> Hours by appointment
-
+          <br>Hours by appointment</p>
       </div>
       <div class="column">
-          5500 Lincoln Drive
+        <p>5500 Lincoln Drive
           <br>Suite 150
-          <br>Edina, MN 55436
-
+          <br>Edina, MN 55436</p>
       </div>
-  </div></footer>
+    </div>
+  </footer>
 
   <script>
   function myFunction() {
