--- a/5_order.html
+++ b/5_order.html
@@ -84,7 +84,7 @@
     <iframe width="600" height="339" src="https://www.youtube.com/embed/kB1TnBfJomQ?controls=1" style="float:center">
   </iframe>
 </div>
-<div>
+<div class="w3-container">
   <p class="padding">Designers Marsha Hunt and Bridget Connell have been featured nationally on NBC Nightly News and in
   numerous regional media outlets such as KARE 11 TV, Edina Magazine, Midwest Home, Mpls-St. Paul Magazine,
   Southwest Metro Magazine and the Minneapolis Star Tribune.</p>
@@ -95,26 +95,33 @@
   the season can be.</p>
 </div>
 
+<div class="w3-container">
   <div class="leftcolumn">
     <p>Learn more about our holiday design and decoration work.</p><br>
   </div>
   <div class="rightcolumn">
   <a href="https://www.hautehousestudio.com/holiday" class="button">HOLIDAY SERVICES</a><br>
   </div>
+</div>
 
+<br>
+
+<div class="w3-container">
 <div class="leftcolumn">
   <p>See what else you can order to let someone know you're thinking of them.</p><br>
 </div>
 <div class="rightcolumn">
  <a href="https://www.hautehousestudio.com/orders" class="button">SEE MORE</a>
 </div>
+</div>
 
+<br>
 
 <div class="row">
-  <div class="column">
+  <div class="halfcolumn">
     <img src="photos_pages/bigtree.png" alt="upside down christmas tree" style="width:100%">
   </div>
-  <div class="column">
+  <div class="halfcolumn">
     <img src="photos_pages/colorwreath.jpg" alt="colorful wreath" style="width:100%">
   </div>
 </div>
