--- a/2_market.html
+++ b/2_market.html
@@ -228,8 +228,6 @@
       </div>
 </div>
 
-
-
 </div>
 
 <br>
@@ -334,7 +332,7 @@
   <div class="row">
     <a name="kt">
     <h3>KT Design</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.png"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.jpg"></div>
       <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
         family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
         cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
