update market with new vendors
add desc and logos and social

--- a/2_market.html
+++ b/2_market.html
@@ -282,6 +282,20 @@
 
 <br>
 
+<div class="row">
+  <a name="cute">
+  <h3>Cute &amp; Delish by Kel</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/cuteanddelish.jpg"></div>
+    <div class="rightcolumnvendor"><p>I did not choose to be a stay at home mom; it chose me. My son Dempsey, was born in 2014 with Cerebral Palsy and Achondroplasia(dwarfism). Because of these conditions Dempsey could not attend daycare, and I quit teaching preschool to care for him. Due to illness and health complications, Dempsey was in and out of the hospital for the first year of life. Then and now, our days are filled with doctor appointments and physical and occupational therapy. Dempsey has made unbelievable gains and amazed all of his specialists. I love devoting all of my time to help Dempsey’s development.</p>
+<p>Dempsey is now three, goes to school two days a week, and (drumroll please) has started walking in his walker. Our days are spent putting him through his “workouts,” reading, playing with his little brother, Dom, and working on eating. Dempsey’s progress has allowed him to become more independent, which has afforded me more free time.  A year ago, my aunt Terrie taught me how to bake and decorate the exceptional cookies I now create. As I have honed my skills, I have developed a passion for crafting personalized cookies for others. I love having another passion other than my kids. I have so much fun creating and decorating cute and delicious cookies. </p>
+      <p><a href="https://www.instagram.com/CuteandDelishbyKel/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+        <a href="https://www.facebook.com/cuteanddelishbykel/"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://cuteanddelishbykel.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
+</div>
+
+<br>
+
   <div class="row">
     <a name="es">
     <h3>Edina Spiritwear</h3>
@@ -345,6 +359,19 @@
 
 <br>
 
+<div class="row">
+  <a name="lady">
+  <h3>Ways to Give by Lady of Ways</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/ladyofways.jpg"></div>
+    <div class="rightcolumnvendor"><p></p>
+      <p><a href="https://www.etsy.com/shop/LadyOfWays?section_id=27475170"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
+</div>
+
+
+
+<br>
+
   <div class="row">
     <a name="mlb">
     <h3>Madeline Lynne Baubles</h3>
@@ -357,6 +384,27 @@
           <a href="https://www.madelinelynnebaubles.com"><i class="fas fa-external-link-alt" style="font-size:24px;"></i></a></p>
       </div>
   </div>
+
+<br>
+
+<div class="row">
+  <a name="maywe">
+  <h3>May We Voyage</h3>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/maywe.png"></div>
+    <div class="rightcolumnvendor"><p>Mon amour of Paris began at an early age. My heritage is Parisian and at 6 months
+      old, I began my voyage to another life in Paris spending every summer and holiday exploring the beautiful city
+      with my family. My mother and grandmother showed me the intricacies of la ville of Paris and the Parisian lifestyle.
+      Sometimes we would enjoy fresh croissants, watching les marionettes in the many parks, other times we would while
+      away the afternoon playing pétanque with reckless abandon.</p>
+      <p>My passion for my other home is something I look forward
+      to sharing with families like yours, through my business May We Voyage. With my education and Parisian
+      background I bring experience, knowledge, creativity and fluency in French so your guided tours will be an
+      exceptional voyage. Allons-y!</p>
+      <p><a href="https://www.instagram.com/maywevoyage/"><i class="fab fa-instagram" style="font-size: 32px;"></i></a> |
+        <a href="https://www.facebook.com/maywevoyage"><i class="fab fa-facebook-square" style="font-size: 32px;"></i></a> |
+        <a href="https://www.maywevoyage.com"><i class="fas fa-external-link-alt" style="font-size: 24px;"></i></a></p>
+    </div>
+</div>
 
 <br>
 
