--- a/2_market.html
+++ b/2_market.html
@@ -346,7 +346,7 @@
   <div class="row">
     <a name="kt">
     <h3>KT Design</h3>
-      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.jpg"></div>
+      <div class="leftcolumnvendor"><img src="photos_mktlogos/ktdesign.jpg" style="border: none;"></div>
       <div class="rightcolumnvendor"><p class="left">KT Design has the perfect range of gifts for everyone on your list from
         family to friends to teachers - even yourself! KT Design creates a variety of oilcloth zip-its, totes to plaid infinity scarves,
         cowls, and wristlets for everyone on your list. Pair your cowl with a graphic tee for a complete look.
@@ -390,7 +390,7 @@
 <div class="row">
   <a name="maywe">
   <h3>May We Voyage</h3>
-    <div class="leftcolumnvendor"><img src="photos_mktlogos/maywe.png"></div>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/maywe.png" style="border: none;"></div>
     <div class="rightcolumnvendor"><p>Mon amour of Paris began at an early age. My heritage is Parisian and at 6 months
       old, I began my voyage to another life in Paris spending every summer and holiday exploring the beautiful city
       with my family. My mother and grandmother showed me the intricacies of la ville of Paris and the Parisian lifestyle.
@@ -462,7 +462,7 @@
 <div class="row">
   <a name="ns">
   <h3>Nu Skin</h3>
-    <div class="leftcolumnvendor"></div>
+    <div class="leftcolumnvendor"><img src="photos_mktlogos/nuskin.png" style="border: none;"></div>
     <div class="rightcolumnvendor"><p class="left"></p>
     </div>
 </div>
