--- a/2_market.html
+++ b/2_market.html
@@ -71,7 +71,7 @@
 
     <div class="hero-image">
       <div class="hero-text">
-        <h1 style="font-size:40px"><strong>HOLIDAY MARKET <br>&amp; IDEAS HOUSE</strong></h1>
+        <h1 style="font-size:40px"><strong>HOLIDAY MARKET <br>&amp; IDEA HOUSE</strong></h1>
       </div>
     </div>
   <br>
@@ -90,7 +90,7 @@
   <p class="padding">Designer gift-wrapping also on location! You can avoid the stress and let our
     pros handle the mess.</p>
 
-  <p class="padding"> Leave feeling festive, inspired, and full of joy after experiencing this
+  <p class="padding">Leave feeling festive, inspired, and full of joy after experiencing this
     new local event.</p>
   <div>
 
