--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ img {border: 1px solid #edeae6;}
 <br>
 
   <div class="w3-container">
-    <h2>HOLIDAY MARKET &amp; IDEAS HOUSE</h2>
+    <h2>HOLIDAY MARKET &amp; IDEA HOUSE</h2>
       <div class="leftcolumn"> <h3 style="text-align:left;">'Tis the season to shop, give, and be inspired.</h3>
           <p>Get to know our local vendors and learn more about the event. </p>
       </div>
